--- a/FacadePlatform/src/main/resources/templates/mutation/student/join.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/student/join.html
@@ -27,7 +27,7 @@
                         <h3 class="box-title">考试信息</h3>
                         <div class="box-tools">
                             <div class="btn-group pull-right">
-                                <a href="/mutation/exam" class="btn btn-sm btn-default">
+                                <a href="/mutation/s/exam" class="btn btn-sm btn-default">
                                     <i class="fa fa-arrow-left"></i>
                                     &nbsp;返回
                                 </a>
