--- a/FacadePlatform/src/main/resources/templates/mutation/student/join.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/student/join.html
@@ -90,7 +90,12 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-2">题库集合</label>
                                 <div class="col-sm-9">
-
+                                    <div class="form-control">
+                                        <a th:each="bank: ${exam == null ? banks : exam.notSelectBankDto}"
+                                                th:text="${bank.name + ';'}"></a>
+                                        <a th:each="bank: ${exam == null ? null : exam.selectBankDto}"
+                                                th:text="${bank.name + ';'}" th:selected="selected"></a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-group">
