--- a/FacadePlatform/src/main/resources/templates/mutation/student/join.html
+++ b/FacadePlatform/src/main/resources/templates/mutation/student/join.html
@@ -91,10 +91,8 @@
                                 <label class="control-label col-sm-2">题库集合</label>
                                 <div class="col-sm-9">
                                     <div class="form-control">
-                                        <a th:each="bank: ${exam == null ? banks : exam.notSelectBankDto}"
-                                                th:text="${bank.name + ';'}"></a>
                                         <a th:each="bank: ${exam == null ? null : exam.selectBankDto}"
-                                                th:text="${bank.name + ';'}" th:selected="selected"></a>
+                                                th:text="${bank.name + ';'}" th:href="${'/mutation/bank/info/' + bank.id}"></a>
                                     </div>
                                 </div>
                             </div>
